--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">PiSync</string>
-    <!--onboarding-->
+    <!-- old onboarding -->
     <string name="page1_title">Welcome to Smart Door!</string>
     <string name="page1_description">Access control made simple and secure.</string>
 
@@ -9,6 +9,16 @@
 
     <string name="page3_title">Smart Features for Your Convenience!</string>
     <string name="page3_description">Enjoy seamless access and better security. Control all your doors from your phone, anytime, anywhere.</string>
+
+    <!-- new onboarding-->
+    <string name="title1">Secure. Smart. Synced</string>
+    <string name="description1">Keep your digital door and data safe. Always in sync, always in control.</string>
+
+    <string name="title2">Your Condo, Your Rules</string>
+    <string name="description2">Manage access, monitor activity, and personalize everything from your phone.</string>
+
+    <string name="title3">Get Started in Seconds.</string>
+    <string name="description3">It\'s fast, simple, and made just for you. Let\'s sync things up!</string>
 
     <!--about-->
     <string name="project_overview">Thesis project designed to revolutionize access control in condominiums by integrating modern technologies with centralized management. The system features a Raspberry Pi 5 as the core, syncing mobile, web, and desktop platforms for seamless door management and access tracking.</string>
